syntax = "proto3";

package gpu_sim;

message DeviceId {
  uint64 value = 1;
}

message Rank {
  uint32 value = 1;
}

message MemAddr {
  uint64 value = 1;
}

message DeviceMemAddr {
  DeviceId deviceId = 1;
  MemAddr srcMemAddr = 2;
  MemAddr dstMemAddr = 3;
  uint64 numBytes = 4;
}

message StreamId {
  uint64 value = 1;
}

message DeviceMetadata {
  DeviceId deviceId = 1;
  MemAddr minMemAddr = 2;
  MemAddr maxMemAddr = 3;
}

// A service that simulates a single GPU device
service GPUDevice {
  rpc GetDeviceMetadata(GetDeviceMetadataRequest) returns (GetDeviceMetadataResponse) {}

  // Called by the GPUCoordinator to start the data transfer between two devices.
  // Begin.*() functions are "non-blocking", meaning they return immediately after initiating the operation.
  // The actual data transfer should happen in the background initiated by the devices.
  rpc BeginSend(BeginSendRequest) returns (BeginSendResponse) {}
  rpc BeginReceive(BeginReceiveRequest) returns (BeginReceiveResponse) {}

  // Called by the src device to send data to the dst device.
  rpc StreamSend(stream DataChunk) returns (StreamSendResponse) {}

  // For the coordinator to know if a stream has completed.
  rpc GetStreamStatus(GetStreamStatusRequest) returns (GetStreamStatusResponse) {}

  // New RPCs for forward and backward passes
  rpc Forward(ForwardRequest) returns (ForwardResponse) {}
  rpc Backward(BackwardRequest) returns (BackwardResponse) {}
}

message GetDeviceMetadataRequest {
}

message GetDeviceMetadataResponse {
  DeviceMetadata metadata = 1;
}

message BeginSendRequest {
  MemAddr sendBuffAddr = 1;
  uint64 numBytes = 2;
  DeviceId dstDeviceId = 3;
}

message BeginSendResponse {
  bool initiated = 1;
  StreamId streamId = 2;
}

message BeginReceiveRequest {
  StreamId streamId = 1;
  MemAddr recvBuffAddr = 2;
  uint64 numBytes = 3;
  DeviceId srcDeviceId = 4;
  ReduceOp op = 5;
}

message BeginReceiveResponse {
  bool initiated = 1;
}

message DataChunk {
  bytes data = 1;
  // You may add more fields here
  StreamId streamId = 2;
}

message StreamSendResponse {
  bool success = 1;
}

message GetStreamStatusRequest {
  StreamId streamId = 1;
}

enum Status {
  IN_PROGRESS = 0;
  SUCCESS = 1;
  FAILED = 2;
}

message GetStreamStatusResponse {
  Status status = 1;
}

enum ForwardOp {
  LINEAR_CROSS_ENTROPY = 0; // Perform a linear forward pass followed by cross-entropy loss computation
}

message ForwardRequest {
  // Memory address for the input (includes a column of ones for the bias)
  MemAddr inputAddress = 1;
  // Size (in bytes) of the input
  uint64 inputSize = 2;

  // Memory address for the weights (includes bias)       
  MemAddr weightAddress = 3;
  // Size (in bytes) of the weights
  uint64 weightSize = 4;

  // Memory address for storing the output
  MemAddr outputAddress = 5;
  // Size (in bytes) of the output  
  uint64 outputSize = 6;

  // Type of forward operation      
  ForwardOp forwardOp = 7;

  // Array of memory addresses for gradient chunks
  repeated MemAddr gradientAddresses = 8;
}

message ForwardResponse {
  bool success = 1;
  double loss = 2;
}

message BackwardRequest {
  MemAddr weightAddress = 1;
  uint64 weightSize = 2;
  // Array of memory addresses for gradient chunks
  repeated MemAddr gradientAddresses = 3;
  repeated uint64 gradientSizes = 4;
  // Learning rate for weight update
  double learningRate = 5;
}

message BackwardResponse {
  bool success = 1;
}

// A service that simulates a coordinator that manages multiple GPU devices
service GPUCoordinator {
  rpc CommInit(CommInitRequest) returns (CommInitResponse) {}
  rpc GetCommStatus(GetCommStatusRequest) returns (GetCommStatusResponse) {}
  // You may choose to implement CommFinalize and CommDestroy RPCs

  // Group operations wrapper
  rpc GroupStart(GroupStartRequest) returns (GroupStartResponse) {}
  rpc GroupEnd(GroupEndRequest) returns (GroupEndResponse) {}

  // RPCs for group or peer-to-peer communication
  rpc AllReduceRing(AllReduceRingRequest) returns (AllReduceRingResponse) {}
  rpc ForwardBroadcast(ForwardBroadcastRequest) returns (ForwardBroadcastResponse) {}
  rpc BackwardBroadcast(BackwardBroadcastRequest) returns (BackwardBroadcastResponse) {}

  // Host-to-device data transfer and vice versa
  // You may implement this as streaming as well
  rpc Memcpy(MemcpyRequest) returns (MemcpyResponse) {}
}

// Create a new communicator with a number of GPUs
message CommInitRequest {
  uint32 numDevices = 1;
}

message CommInitResponse {
  bool success = 1;
  // If successful, the response will contain a unique communicator ID.
  uint64 commId = 2;
  repeated DeviceMetadata devices = 3;
  // Add more metadata here if needed
}

message GetCommStatusRequest {
  uint64 commId = 1;
}

message GetCommStatusResponse {
  Status status = 1;
}

// Group operation messages
message GroupStartRequest {
  uint64 commId = 1;
}

message GroupStartResponse {
  bool success = 1;
}

message GroupEndRequest {
  uint64 commId = 1;
}

message GroupEndResponse {
  bool success = 1;
}

enum ReduceOp {
  SUM = 0;
  PROD = 1;
  MIN = 2;
  MAX = 3;
  // use for distributing data; overwrite the existing data with the new
  NOP = 4;
}

message AllReduceRingRequest {
  uint64 commId = 1;
  ReduceOp op = 2;
  repeated DeviceMemAddr reduceDeviceMemAddrs = 3;
  repeated DeviceMemAddr gatherDeviceMemAddrs = 4;
}

message AllReduceRingResponse {
  bool success = 1;
}

message ForwardBroadcastRequest {
  uint64 commId = 1;
  // DeviceId -> ForwardRequest; protobuf doesn't support message type keys or type aliases
  map<uint64, ForwardRequest> forwardRequests = 2;
}

message ForwardBroadcastResponse {
  bool success = 1;
  double loss = 2;
}

message BackwardBroadcastRequest {
  uint64 commId = 1;
  // DeviceId -> BackwardRequest; protobuf doesn't support message type keys or type aliases
  map<uint64, BackwardRequest> backwardRequests = 2;
}

message BackwardBroadcastResponse {
  bool success = 1;
}

// "CPU" -> "GPU", i.e., GPUCoordinator -> GPUDevice
message MemcpyHostToDeviceRequest {
  bytes hostSrcData = 1;
  DeviceId dstDeviceId = 2;
  MemAddr dstMemAddr = 3;
}
message MemcpyHostToDeviceResponse {
  bool success = 1;
}

// "GPU" -> "CPU", i.e., GPUDevice -> GPUCoordinator
message MemcpyDeviceToHostRequest {
  DeviceId srcDeviceId = 1;
  MemAddr srcMemAddr = 2;
  uint64 numBytes = 3;
}
message MemcpyDeviceToHostResponse {
  bytes dstData = 1;
}

message MemcpyRequest {
  oneof either {
    MemcpyHostToDeviceRequest hostToDevice = 1;
    MemcpyDeviceToHostRequest deviceToHost = 2;
  }
}
message MemcpyResponse {
  oneof either {
    MemcpyHostToDeviceResponse hostToDevice = 1;
    MemcpyDeviceToHostResponse deviceToHost = 2;
  }
}

